tests/baselines/reference/mixingStaticAndInstanceOverloads.errors.txt
tests/cases/compiler/mixingStaticAndInstanceOverloads.ts(5,12): error TS2388: Function overload must not be static.
tests/cases/compiler/mixingStaticAndInstanceOverloads.ts(11,5): error TS2387: Function overload must be static.
tests/cases/compiler/mixingStaticAndInstanceOverloads.ts(16,12): error TS2388: Function overload must not be static.
tests/cases/compiler/mixingStaticAndInstanceOverloads.ts(17,5): error TS2387: Function overload must be static.
tests/cases/compiler/mixingStaticAndInstanceOverloads.ts(22,5): error TS2387: Function overload must be static.
tests/cases/compiler/mixingStaticAndInstanceOverloads.ts(23,12): error TS2388: Function overload must not be static.


==== tests/cases/compiler/mixingStaticAndInstanceOverloads.ts (6 errors) ====
    class C1 {
        // ERROR
        foo1(n: number);
        foo1(s: string);
        static foo1(a) { }
               ~~~~
!!! error TS2388: Function overload must not be static.
    }
    class C2 {
        // ERROR
        static foo2(n: number);
        static foo2(s: string);
        foo2(a) { }
        ~~~~
!!! error TS2387: Function overload must be static.
    }
    class C3 {
        // ERROR
        foo3(n: number);
        static foo3(s: string);
               ~~~~
!!! error TS2388: Function overload must not be static.
        foo3(a) { }
        ~~~~
!!! error TS2387: Function overload must be static.
    }
    class C4 {
        // ERROR
        static foo4(n: number);
        foo4(s: string);
        ~~~~
!!! error TS2387: Function overload must be static.
        static foo4(a) { }
               ~~~~
!!! error TS2388: Function overload must not be static.
    }
    class C5 {
        // OK
        foo5(n: number);
        foo5(s: string);
        foo5(a) { }
    
        // OK
        static foo5(n: number);
        static foo5(s: string);
        static foo5(a) { }
    }